Fix box-shadow overlap with clip-path

--- a/docs/src/app/(private)/experiments/slider/inset.mac.module.css
+++ b/docs/src/app/(private)/experiments/slider/inset.mac.module.css
@@ -79,6 +79,7 @@
     left: 0;
     transform: translateX(-100%);
     box-shadow: 0 0 0 1px var(--track-outer-border-color);
+    clip-path: inset(-2px -0.1px -2px -2px);
   }
 
   &:after {
@@ -91,6 +92,7 @@
     right: 0;
     transform: translateX(100%);
     box-shadow: 0 0 0 1px var(--track-outer-border-color);
+    clip-path: inset(-2px -2px -2px 0.1px);
     z-index: 0;
   }
 }
